k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-service
  namespace: todo-list
  labels:
    app: todo-list
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: todo-list
    component: web
